# avito-test-banner

./: .gitignore  Dockerfile  README.md  alembic.ini  config.py  customize_logger.py  docker-compose.yaml  logging_config.json  main.py  pyproject.toml  setup.cfg
alembic/migrations/: env.py
alembic/migrations/versions/: 2024-04-12_init_db__c1774ede579e.py  2024-04-14_init_db__0968f547eba9.py
docs/: task.md
source/api/v1/banner/: constants.py  dao.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
source/api/v1/set_header/: constants.py  router.py
source/database/: __init__.py  base_orm.py  custom_data_types.py  engine.py
source/middleware/: request_process_time_log.py
